--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Amruth Raghav</title>
 
   <!-- Description-->
-  <meta content="Personal Portfolio Template" name="description">
+  <meta content="Personal Portfolio" name="description">
 
   <!-- Favicons-->
   <link href="img/favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
