Bug fix to blog page

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 
           <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="Resume.pdf" role="button"><centre>Download My Resume</centre></a></div>
 
-          </div>
+        
         </div>
       </div>
     </div>
@@ -589,7 +589,7 @@
                   </div>
                 </a>
               </div>
-              <!-- END: item
+              <!-- END: item -->
 
               
             </div>
@@ -600,6 +600,7 @@
   </div>
 </div>
 <!-- END: portfolio -->
+
 <!-- Blog lightbox-->
 <div class="lightbox-wrapper" id="blog" data-simplebar>
   <div class="container">
