--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 
               
 
-              <div class="single-item col-6 col-lg-4 web">
+              <div class="single-item col-6 col-lg-4 work">
                 <a class="portfolio-item" data-lightbox href="img/portfolio/PFPA.png">
                   <div class="portfolio-wrapper">
                     <img alt="Item" class="img-fluid" src="img/portfolio/PFPA.png">
