--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
               <div class="single-item col-6 col-lg-4 work">
                 <a class="portfolio-item" data-lightbox href="https://github.com/amruthraghav/FINA4350">
                   <div class="portfolio-wrapper">
-                    <img alt="Item" class="img-fluid" src="Financial_Linguists_Report.pdf">
+                    <img alt="Item" class="img-fluid" src="img/Blog1.png">
                     <div class="item-content">
                       <h6 class="content-title">Reading the Mind of Financial Bankers</h6>
                       <span class="content-more">Finding the Correlation of FED Speeches and Predicting the FED Fund Rate Decision using NLP and Sentiment Analysis</span>
@@ -567,7 +567,7 @@
               <div class="single-item col-6 col-lg-4 work">
                 <a class="portfolio-item" data-lightbox href="https://github.com/amruthraghav/NLP-on-10K-Documents">
                   <div class="portfolio-wrapper">
-                    <img alt="Item" class="img-fluid" src="img/portfolio/LLS.jpg">
+                    <img alt="Item" class="img-fluid" src="img/portfolio/NLP-10K.png">
                     <div class="item-content">
                       <h6 class="content-title">NLP on 10K and 10Q Documents</h6>
                       <span class="content-more">Scraping and Analysing Financial Documents filled by Publically Traded Companies</span>
