Updated Resume and Covid Visualisation

--- a/index.html
+++ b/index.html
@@ -498,6 +498,20 @@
 
             <!-- Thumbnail list-->
             <div class="portfolio-grid row">
+
+              <!-- START: item -->
+              <div class="single-item col-6 col-lg-4 work">
+                <a class="portfolio-item" data-lightbox href="https://amruth-covid-visualisation.herokuapp.com/">
+                  <div class="portfolio-wrapper">
+                    <img alt="Item" class="img-fluid" src="img/Covid-Visual.png">
+                    <div class="item-content">
+                      <h6 class="content-title">COVID-19 Data Visualisation</h6>
+                      <span class="content-more">Cool and User-Friendly Web Application to visualise COVID data in different countries. Built using Dash, Plotly and Flourish</span>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
               <!-- START: item -->
               <div class="single-item col-6 col-lg-4 web">
                 <a class="portfolio-item" data-lightbox href="img/portfolio/SmarTone.JPG">
