--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
               <!-- START: item -->
               <div class="single-item col-6 col-lg-4 work">
-                <a class="portfolio-item" data-lightbox href="https://amruth-covid-visualisation.herokuapp.com/">
+                <a class="portfolio-item" href="https://amruth-covid-visualisation.herokuapp.com/" target="_blank">
                   <div class="portfolio-wrapper">
                     <img alt="Item" class="img-fluid" src="img/Covid-Visual.png">
                     <div class="item-content">
@@ -565,7 +565,7 @@
 
               <!-- START: item -->
               <div class="single-item col-6 col-lg-4 work">
-                <a class="portfolio-item" data-lightbox href="https://github.com/amruthraghav/FINA4350">
+                <a class="portfolio-item" href="https://github.com/amruthraghav/FINA4350" target="_blank">
                   <div class="portfolio-wrapper">
                     <img alt="Item" class="img-fluid" src="img/Blog1.png">
                     <div class="item-content">
@@ -579,7 +579,7 @@
 
               <!-- START: item -->
               <div class="single-item col-6 col-lg-4 work">
-                <a class="portfolio-item" data-lightbox href="https://github.com/amruthraghav/NLP-on-10K-Documents">
+                <a class="portfolio-item" href="https://github.com/amruthraghav/NLP-on-10K-Documents" target="_blank">
                   <div class="portfolio-wrapper">
                     <img alt="Item" class="img-fluid" src="img/portfolio/NLP-10K.png">
                     <div class="item-content">
@@ -594,7 +594,7 @@
 
               <!-- START: item -->
               <div class="single-item col-6 col-lg-4 work">
-                <a class="portfolio-item" data-lightbox href="https://lifelinesol.wixsite.com/main">
+                <a class="portfolio-item" href="https://lifelinesol.wixsite.com/main" target="_blank">
                   <div class="portfolio-wrapper">
                     <img alt="Item" class="img-fluid" src="img/portfolio/LLS.jpg">
                     <div class="item-content">
